# ProjectManager

./: .dockerignore  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
adapters/: NoSql.py  Sqlite.py
dantics/: BugDantic.py  DevelopTaskDantic.py  DictDantic.py  GlobalDantic.py  QaTaskDantic.py  ReqDantic.py  RequirementDantic.py  TaskPoolDantic.py  TasksDantic.py  UserDantic.py
depends/: Auth.py
duck/: INoSqlAda.py  IStandardAda.py  IStandardTb.py
enums/: ProjectStatusEnum.py  StandardBusEnum.py  StandardErrEnum.py
models/: TbBug.py  TbDevelopTask.py  TbPiont.py  TbQaTask.py  TbReqFeatureLog.py  TbRequirement.py  TbRequirements.py  TbTaskLog.py  TbTaskPool.py  TbUser.py  TbWork.py  __init__.py
repository/: BugRepository.py  DevelopTaskRepository.py  NosqlRepository.py  QaTaskRepository.py  RequirementRepository.py  TaskPoolRepository.py  TaskRepository.py  UserRepository.py
routers/: Bug.py  Dashboard.py  DevelopTask.py  Dict.py  Key.py  QaTask.py  Requirement.py  Task.py  TaskPool.py  User.py
service/: BugCenter.py  DashboardCenter.py  DevelopTaskCenter.py  KeyCenter.py  NoSqlCenter.py  QaTaskCenter.py  RequirementCenter.py  TaskPoolCenter.py  TasksCenter.py  UserCenter.py
templates/: StandardDBTemplate.py  StandardNoSqlTemplate.py  StandardRepositoryTemplate.py  StandardResTemplate.py  StandardSysTemplate.py
tests/: test_config.py  test_main.py
tests/dantics/: test_global_dantic.py  test_user_dantic.py
tools/: Files.py  Re.py
utils/: Encry.py  Excptions.py  JWT.py  Logs.py  NoSqlPool.py  Pool.py
(+14 files in other folders)
