[project]
name = "project-server-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "jose>=1.0.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.13.4",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

dev-logs = [
    "rich>=15.0.0",
]
